<resources>
    <string name="app_name">Eventually</string>
    <string name="main_top_app_bar_subtitle_summary">Summary</string>
    <string name="main_top_app_bar_subtitle_list">Tasks</string>
    <string name="main_top_app_bar_subtitle_calendar">Calendar</string>
    <string name="section_expand_tooltip">Show more</string>
    <string name="section_collapse_tooltip">Show less</string>
    <string name="search_hint">Search Tasks</string>
    <string name="create_task_hint">Create Task</string>
    <string name="edit_task_hint">Edit Task</string>
    <string name="settings_hint">Settings</string>
    <string name="stats_hint">Statistics</string>
    <string name="about_hint">About</string>
    <string name="about_version">Version %1$s</string>
    <string name="license_header">This project is licensed under the Apache License, Version 2.0</string>
    <string name="license_copyright">Copyright 2020 https://github.com/sndnv</string>
    <string name="license_info">
        Licensed under the Apache License, Version 2.0 (the "License");
        you may not use this file except in compliance with the License.
        You may obtain a copy of the License at
        \n\n
        http://www.apache.org/licenses/LICENSE-2.0
        \n\n
        Unless required by applicable law or agreed to in writing, software
        distributed under the License is distributed on an "AS IS" BASIS,
        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
        See the License for the specific language governing permissions and
        limitations under the License.
    </string>
    <string name="license_footer">
        For more information, visit
        \n
        https://github.com/sndnv/eventually
    </string>
    <string name="notification_channel_foreground_service_name">Scheduler Service</string>
    <string name="notification_channel_instance_execution_name">Task Notifications</string>
    <string name="notification_channel_instance_context_switch_name">Task Context Switch Notifications</string>
    <string name="notification_foreground_service_title">Background Scheduler Running</string>
    <string name="notification_instance_execution_title">[%1$s] - %2$s</string>
    <string name="notification_instance_execution_text">[%1$s] - %2$s</string>
    <string name="notification_instance_execution_no_description_text">[%s]</string>
    <string name="notification_instance_context_switch_title">[%1$s] - %2$s</string>
    <string name="notification_instance_context_switch_text">[%1$s] - %2$s</string>
    <string name="notification_instance_context_switch_no_description_text">[%s]</string>
    <string name="notification_instance_action_dismiss_title">Dismiss</string>
    <string name="notification_instance_action_postpone_title">Postpone</string>
    <string name="toast_task_created">Task created</string>
    <string name="toast_task_updated">Task updated</string>
    <string name="toast_task_deleted">Task deleted</string>
    <string name="toast_task_dismissed">Task dismissed</string>
    <string name="toast_task_postponed">Task postponed</string>
    <string name="snackbar_task_dismissed">Task dismissed</string>
    <string name="snackbar_task_dismissed_action">Undo</string>
    <string name="snackbar_task_postponed">Task postponed</string>
    <string name="summary_item_content">%1$s - %2$s (%3$s)</string>
    <string name="summary_item_instant">%1$s at %2$s</string>
    <string name="summary_item_instant_today">%s</string>
    <string name="summary_timeline_title">Show Timeline</string>
    <string name="summary_timeline_dialog_title">Timeline - Today and Tomorrow</string>
    <string name="summary_timeline_dialog_item_text">%1$s - %2$s (%3$s)</string>
    <string name="summary_expired_overview_title">Overdue</string>
    <string name="summary_expired_dialog_title">Overdue</string>
    <string name="summary_expired_dialog_item_text">%1$s - %2$s (%3$s)</string>
    <string name="summary_expired_footer_empty">None</string>
    <plurals name="summary_expired_footer_non_empty">
        <item quantity="one">One task expired since %2$s</item>
        <item quantity="other">%1$s tasks expired since %2$s</item>
    </plurals>
    <string name="summary_upcoming_overview_title">Upcoming</string>
    <string name="summary_upcoming_dialog_title">Upcoming</string>
    <string name="summary_upcoming_dialog_item_text">%1$s - %2$s (%3$s)</string>
    <plurals name="summary_upcoming_footer_empty_period">
        <item quantity="one">No tasks expected in the next %2$s.</item>
        <item quantity="other">No tasks expected in the next %1$s %2$s.</item>
    </plurals>
    <plurals name="summary_upcoming_footer_non_empty_tasks">
        <item quantity="one">One task expected</item>
        <item quantity="other">%1$s tasks expected</item>
    </plurals>
    <plurals name="summary_upcoming_footer_non_empty_period">
        <item quantity="one">in the next %2$s.</item>
        <item quantity="other">in the next %1$s %2$s.</item>
    </plurals>
    <string name="calendar_dialog_title">%s</string>
    <string name="calendar_dialog_item_text">%1$s %2$s - %3$s (%4$s)</string>
    <string name="task_list_empty_text">No Tasks</string>
    <string name="task_details_field_title_name">Name (required)</string>
    <string name="task_details_field_title_name_hint">Task name</string>
    <string name="task_details_field_title_description">Description (optional)</string>
    <string name="task_details_field_title_description_hint">Extra task information</string>
    <string name="task_details_field_title_goal">Category (required)</string>
    <string name="task_details_field_title_goal_hint">Goal, category or group for the task</string>
    <string name="task_details_field_title_context_switch">Context Switch (required)</string>
    <string name="task_details_field_title_color">Calendar Event Color</string>
    <string name="task_details_field_title_is_active">Enabled</string>
    <string name="task_details_field_title_schedule">Schedule</string>
    <string name="task_details_field_title_schedule_once">Once</string>
    <string name="task_details_field_title_schedule_once_date">On</string>
    <string name="task_details_field_title_schedule_once_time">At</string>
    <string name="task_details_field_title_schedule_repeating">Repeating</string>
    <string name="task_details_field_title_schedule_repeating_start_date">Starting From</string>
    <string name="task_details_field_title_schedule_repeating_start_time">At</string>
    <string name="task_details_field_title_schedule_repeating_every">Every</string>
    <string name="task_details_field_title_schedule_repeating_days">Only On</string>
    <string name="task_details_field_error_name">Name cannot be empty</string>
    <string name="task_details_field_error_goal">Category cannot be empty</string>
    <string name="task_details_field_error_context_switch_duration">Duration cannot be empty or 0</string>
    <string name="task_details_field_error_context_switch_duration_padding"> </string>
    <string name="task_details_field_error_schedule_repeating_duration">Duration cannot be empty or 0</string>
    <string name="task_details_field_error_schedule_repeating_duration_padding">\n</string>
    <string name="task_details_field_help_title_context_switch">Context Switch</string>
    <string name="task_details_field_help_content_context_switch">
        A context switch is a notification created before a task\'s next alarm is due.
    </string>
    <string name="task_details_color_reset">Reset</string>
    <string name="task_preview_button_text_dismiss">Dismiss</string>
    <string name="task_preview_button_text_postpone">Postpone</string>
    <string name="task_preview_button_text_undo">Undo</string>
    <string name="task_preview_button_description_delete">Delete Task</string>
    <string name="task_preview_field_title_name">Name</string>
    <string name="task_preview_field_title_description">Description</string>
    <string name="task_preview_field_title_goal">Category</string>
    <string name="task_preview_field_title_context_switch">Context Switch</string>
    <string name="task_preview_field_title_schedule">Schedule</string>
    <string name="task_preview_field_title_instances">Instances</string>
    <string name="task_preview_field_title_instances_dismissed">Dismissed</string>
    <string name="task_preview_field_content_inactive">(disabled)</string>
    <string name="task_preview_field_content_context_switch">%1$d %2$s</string>
    <string name="task_preview_field_content_schedule_once">On %1$s at %2$s</string>
    <string name="task_preview_field_content_schedule_repeating_every_day">Starting from %1$s at %2$s\nEvery %3$s %4$s</string>
    <string name="task_preview_field_content_schedule_repeating_on_days">Starting from %1$s at %2$s\nEvery %3$s %4$s\nOnly on %5$s</string>
    <string name="task_preview_field_content_instance_execution">%s</string>
    <string name="task_preview_field_content_instance_execution_postponed">%s (postponed)</string>
    <string name="task_preview_field_content_instance_dismissed">%s</string>
    <string name="task_preview_instances_empty_text">None</string>
    <string name="task_preview_instances_too_many_text">Showing %1$s out of %2$s instances</string>
    <string name="task_preview_instances_too_many_tooltip">Dismiss some instances to show more</string>
    <string name="task_preview_instances_dismissed_empty_text">None</string>
    <string name="new_task_subtitle">Create Task</string>
    <string name="new_task_action">Create</string>
    <string name="existing_task_update_action">Update</string>
    <string name="existing_task_delete_message">Delete task %1$s?</string>
    <string name="settings_subtitle">Settings</string>
    <string name="settings_category_summary">Summary</string>
    <string name="settings_category_date_time">Date/Time</string>
    <string name="settings_category_other">Other</string>
    <string name="settings_category_debug">Debug</string>
    <string name="settings_summary_size_title">Size</string>
    <plurals name="settings_summary_size_hint">
        <item quantity="one">Show expected tasks in the next %2$s</item>
        <item quantity="other">Show expected tasks in the next %1$s %2$s</item>
    </plurals>
    <string name="settings_summary_max_tasks_title">Tasks</string>
    <string name="settings_summary_max_tasks_hint">Show at most %1$s tasks</string>
    <string name="settings_postpone_length_title">Postpone length</string>
    <plurals name="settings_postpone_length_hint">
        <item quantity="one">Postpone a task by %1$s minute</item>
        <item quantity="other">Postpone a task by %1$s minutes</item>
    </plurals>
    <string name="settings_date_time_format_title">Format</string>
    <string name="settings_date_time_format_hint">Show dates as %1$s and time as %2$s</string>
    <string name="settings_first_day_of_week_title">Start week on</string>
    <string name="settings_first_day_of_week_hint">%1$s</string>
    <string name="settings_stats_enabled_title">Show statistics menu option</string>
    <string name="settings_show_all_instances_title">Show all task instances</string>
    <string name="stats_subtitle">Statistics</string>
    <string name="stats_title_tasks">Tasks</string>
    <string name="stats_title_schedules">Task Schedules</string>
    <string name="stats_title_notifications">Notifications</string>
    <string name="stats_title_last_evaluation">Last Evaluation</string>
    <string name="stats_title_next_evaluation">Next Evaluation</string>
    <string name="stats_title_evaluations">Evaluations</string>
    <string name="stats_content_tasks">Total: %1$s (enabled: %2$s, disabled: %3$s)</string>
    <string name="stats_content_schedules">Total: %1$s (with %2$s instance(s))</string>
    <string name="stats_content_notifications">Total: %1$s (context: %2$s, execution: %3$s)</string>
</resources>